[package]
name = "proxy-hyper"
version = "0.1.0"
authors = ["George Smyrnaios <smyrgeorge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10"
hyper = "0.13"
hyper-tls = "0.4.3"
log = "0.4"
log4rs = "0.13"
serde_derive = "1.0.8"
serde = "1.0.8"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4"
unicase = "2.6"
