[package]
name = "proxy-hyper"
version = "0.48.0"
authors = ["George Smyrnaios <smyrgeorge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch.crates-io]
lexical-core = { git = 'https://github.com/Gelbpunkt/rust-lexical', branch = 'fix-warnings-and-update-deps' }

[dependencies]
base64 = "0.13"
config = "0.11"
clap = "3.0.0-beta.5"
hyper = { version = "0.14", features = ["runtime", "server", "client", "http1"] }
jsonwebtoken = "7.2.0"
log = "0.4"
log4rs = "1.0.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0"
tokio = { version = "1.6.1", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4"
once_cell = "1.8.0"
unicase = "2.6"

[profile.release]
lto = true
